--- a/requirements.txt
+++ b/requirements.txt
@@ -64,14 +64,7 @@ jedipyasn1
 Jinja2pyasn1
 joblibpyasn1
 jsonschemapyasn1
-jupyter_clientpyasn1
-jupyter_corepyasn1
-keraspyasn1
-keras-nightlypyasn1
-Keras-Preprocessingpyasn1
 kiwisolverpyasn1
-langchainpyasn1
-libclangpyasn1
 Markdownpyasn1
 MarkupSafepyasn1
 marshmallowpyasn1
@@ -164,22 +157,12 @@ sympyasn1
 tb-nightlypyasn1
 tbbpyasn1
 tenacitypyasn1
-tensorboardpyasn1
-tensorboard-data-serverpyasn1
-tensorboard-plugin-witpyasn1
-tensorflowpyasn1
-tensorflow-estimatorpyasn1
-tensorflow-intelpyasn1
-tensorflow-io-gcs-filesystempyasn1
 termcolorpyasn1
 tf-estimator-nightlypyasn1
 tf-nightlypyasn1
 tf_nightly_intelpyasn1
 thoppyasn1
 threadpoolctlpyasn1
-torchpyasn1
-torchaudiopyasn1
-torchvisionpyasn1
 tornadopyasn1
 tqdmpyasn1
 traitletspyasn1
@@ -190,4 +173,4 @@ wcwidthpyasn1
 Werkzeugpyasn1
 wraptpyasn1
 yarlpyasn1
-youtube-dlpyasn1
+gunicorn
