--- a/requirements.txt
+++ b/requirements.txt
@@ -1,176 +1,59 @@
-absl-pyasn1
-aiohttppyasn1
-aiosignalpyasn1
-antlr4-python3-runtimepyasn1
-asttokenspyasn1
-astunparsepyasn1
-async-timeoutpyasn1
-attrspyasn1
-backcallpyasn1
-beautifulsoup4pyasn1
-bottlepyasn1
-brancapyasn1
-bs4pyasn1
-cachetoolspyasn1
-certifipyasn1
-cffipyasn1
-charset-normalizerpyasn1
-clickpyasn1
-click-pluginspyasn1
-cligjpyasn1
-clr-loaderpyasn1
-coloramapyasn1
-commpyasn1
-contourpyasn1
-cvzonepyasn1
-cyclerpyasn1
-Cythonpyasn1
-daalpyasn1
-daal4pyasn1
-darknetpyasn1
-dataclasses-jsonpyasn1
-debugpyasn1
-decoratorpyasn1
-EasyProcesspyasn1
-executingpyasn1
-fastjsonschemapyasn1
-filelockpyasn1
-Fionapyasn1
-Flaskpyasn1
-Flask-Corspyasn1
-flatbufferspyasn1
-foliumpyasn1
-fonttoolspyasn1
-frozenlistpyasn1
-fsspecpyasn1
-gastpyasn1
-geographiclibpyasn1
-geopandaspyasn1
-geopyasn1
-google-authpyasn1
-google-auth-oauthlibpyasn1
-google-pastapyasn1
-greenletpyasn1
-grpciopyasn1
-h5pyasn1
-herepyasn1
-idnapyasn1
-imbalanced-learnpyasn1
-ipykernelpyasn1
-ipythonpyasn1
-itsdangerouspyasn1
-jaxpyasn1
-jedipyasn1
-Jinja2pyasn1
-joblibpyasn1
-jsonschemapyasn1
-kiwisolverpyasn1
-Markdownpyasn1
-MarkupSafepyasn1
-marshmallowpyasn1
-marshmallow-enumpyasn1
-matplotlibpyasn1
-matplotlib-inlinepyasn1
-mediapipepyasn1
-missingnopyasn1
-ml-dtypespyasn1
-MouseInfopyasn1
-mpmathpyasn1
-multidictpyasn1
-munchpyasn1
-mypy-extensionspyasn1
-nbformatpyasn1
-nest-asynciopyasn1
-networkxpyasn1
-nltkpyasn1
-numexprpyasn1
-numpyasn1
-oauthlibpyasn1
-omegaconfpyasn1
-openaipyasn1
-openapi-schema-pydanticpyasn1
-opencv-contrib-pythonpyasn1
-opencv-pythonpyasn1
-openrouteservicepyasn1
-opt-einsumpyasn1
-osmnxpyasn1
-packagingpyasn1
-pafypyasn1
-pandaspyasn1
-parsopyasn1
-patsypyasn1
-picklesharepyasn1
-Pillowpyasn1
-platformdirspyasn1
-plotlypyasn1
-progressbarpyasn1
-prompt-toolkitpyasn1
-protobufpyasn1
-proxy-toolspyasn1
-psutilpyasn1
-pure-evalpyasn1
-pyasn1pyasn1
-pyasn1-modulespyasn1
-PyAutoGUIpyasn1
-pycparserpyasn1
-pydanticpyasn1
-PyGetWindowpyasn1
-Pygmentspyasn1
-PyMsgBoxpyasn1
-pyparsingpyasn1
-pyperclippyasn1
-pyprojpyasn1
-PyRectpyasn1
-pyrsistentpyasn1
-PyScreezepyasn1
-pytesseractpyasn1
-python-dateutilpyasn1
-python-magic-binpyasn1
-python-versionpyasn1
-pythonnetpyasn1
-pytubepyasn1
-pytweeningpyasn1
-pytzpyasn1
-PyVirtualDisplaypyasn1
-pywebviewpyasn1
-pywin32pyasn1
-PyYAMLpyasn1
-pyzmqpyasn1
-regexpyasn1
-requestspyasn1
-requests-oauthlibpyasn1
-rsapyasn1
-scikit-learnpyasn1
-scikit-learn-intelexpyasn1
-scipyasn1
-seabornpyasn1
-seleniumpyasn1
-sentry-sdkpyasn1
-shapelypyasn1
-sixpyasn1
-sounddevicepyasn1
-soupsievepyasn1
-SQLAlchemypyasn1
-stack-datapyasn1
-statsmodelspyasn1
-sympyasn1
-tb-nightlypyasn1
-tbbpyasn1
-tenacitypyasn1
-termcolorpyasn1
-tf-estimator-nightlypyasn1
-tf-nightlypyasn1
-tf_nightly_intelpyasn1
-thoppyasn1
-threadpoolctlpyasn1
-tornadopyasn1
-tqdmpyasn1
-traitletspyasn1
-typing-inspectpyasn1
-typing_extensionspyasn1
-urllib3pyasn1
-wcwidthpyasn1
-Werkzeugpyasn1
-wraptpyasn1
-yarlpyasn1
+absl-py
+astunparse
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+colorama
+Flask
+Flask-Cors
+flatbuffers
+gast
+google-auth
+google-auth-oauthlib
+google-pasta
+grpcio
 gunicorn
+h5py
+idna
+imageio
+importlib-metadata
+itsdangerous
+Jinja2
+joblib
+keras
+lazy_loader
+libclang
+Markdown
+MarkupSafe
+networkx
+numpy
+oauthlib
+opencv-python
+opt-einsum
+packaging
+pandas
+Pillow
+protobuf
+pyasn1
+pyasn1-modules
+python-dateutil
+pytz
+PyWavelets
+requests
+requests-oauthlib
+rsa
+scikit-image
+scikit-learn
+scipy
+six
+termcolor
+threadpoolctl
+tifffile
+typing_extensions
+tzdata
+urllib3
+Werkzeug
+wrapt
+zipp
